# basic-operators

./: Cargo.toml  LICENSE_MIT  README.md
src/: dummy.rs  graph.rs  legacy.rs  lib.rs  prelude.rs  view.rs
src/legacy/: justincase.rs  legacy.rs
src/operators/: aggregation.rs  innerjoin.rs  leaf.rs  mod.rs  operation.rs  projection.rs  root.rs  selection.rs
src/types/: changetype.rs  datatype.rs  mod.rs  schematype.rs
src/units/: change.rs  mod.rs  row.rs
src/viewsandgraphs/: dfg.rs  view.rs
tests/: web.rs
www/: index.css  index.html  index.js  package-lock.json  package.json  test.txt
